# openembedded

./: README  gpio-trigger_1.0.0.bb  kmodule-test_1.0.0.bb  qmi-cli.bb
files/: CMakeLists.txt  COPYING  LICENSE  debug.h  gpio-trigger-test.c  gpio-trigger.c  gpio-trigger.init  kmodule_test.c
files/inc/: common.h  qmi-cli-func.h  qmi-cli.h  utils.h
files/src/: qmi-cli-func.c  qmi-cli-handler.c  qmi-cli-main.c  utils.c
kmod-gpio-trigger/: README  README.md  gpio-trigger_1.0.0.bb
kmod-gpio-trigger/files/: Makefile  gpio-trigger-test.c  gpio-trigger.c
qmi-cli/: qmi-cli.bb
qmi-cli/files/: CMakeLists.txt
qmi-cli/files/inc/: qmi-cli-handler.h
qmi-cli/files/src/: qmi-cli-func.c
